--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
         </div>
       </td>
     </template>
+    <template id="color">
+      <div class="color">
+        <div class="color__preview">
+          <div class="color__preview-inner"></div>
+        </div>
+        <div class="color__text"><span class="color__text-number-sign">#</span><span class="color__text-rgb"></span><span class="color__text-alpha"></span></div>
+      </div>
+    </template>
     <header class="space-x-5">
       <div class="flex-grow">
         <h1>Sketch Theme Colors</h1>
@@ -87,6 +95,10 @@
       <thead></thead>
       <tbody></tbody>
     </table>
+    <div class="tooltip">
+      <div class="tooltip__heading">Previous value:</div>
+      <div class="tooltip__body"></div>
+    </div>
     <script src="./assets/scripts/main.js" type="module"></script>
   </body>
 </html>
