--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         </svg>
         <input class="input-group__input" type="search" placeholder="Search" spellcheck="false">
       </div>
+      <div class="button-group -space-x-px flex-shrink-0" id="views-button-group">
+        <button class="button-group__button" data-value="theme" aria-pressed="true">Theme</button>
+        <button class="button-group__button" data-value="plist">Property List</button>
+      </div>
+      <div class="button-group -space-x-px flex-shrink-0" id="changes-button-group">
+        <button class="button-group__button">Changes Only</button>
+      </div>
       <div class="dropdown flex-shrink-0">
         <button class="dropdown__button" id="colors-menu" aria-haspopup="true"><span class="dropdown__placeholder">All Colors</span>
           <svg class="dropdown__chevron" viewBox="0 0 20 20">
@@ -75,10 +82,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="button-group -space-x-px flex-shrink-0">
-        <button class="button-group__button" data-value="theme" aria-pressed="true">Theme</button>
-        <button class="button-group__button" data-value="plist">Property List</button>
       </div>
       <div class="dropdown flex-shrink-0">
         <button class="dropdown__button" id="versions-menu" aria-haspopup="true"><span class="dropdown__placeholder"></span><span class="dropdown__placeholder">Version</span>
